--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                                     <li><a href="#about" class="nav-link">about</a></li>
                                     <li><a href="#menu" class="nav-link">menu</a></li>
                                     <li><a href="#review" class="nav-link">review</a></li>
+                                    <li><a href="blog.html" class="nav-link">blog</a></li>
                             </ul>
 
                             <div class="media-icons flex">
