--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Website</title>
 
-    <!-- Swiper JS CSS-->
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
-    <!-- Scroll Reveal -->
     <link rel="stylesheet" href="css/scrollreveal.min.js">
 
-    <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         
-    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -298,7 +294,7 @@
                     <div class="tesitmonial swiper mySwiper">
                             <div class="swiper-wrapper">
                                     <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg2.jpg" alt="" class="review-img">
+                                            <img src="images\profileImg4.jpg" alt="" class="review-img">
                                             <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
                                             <i class='bx bxs-quote-alt-left quote-icon'></i>
 
@@ -308,7 +304,7 @@
                                             </div>
                                     </div>
                                     <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg1.jpg" alt="" class="review-img">
+                                            <img src="images/profileImg5.jpg" alt="" class="review-img">
                                             <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
                                             <i class='bx bxs-quote-alt-left quote-icon'></i>
 
@@ -318,7 +314,7 @@
                                             </div>
                                     </div>
                                     <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg3.jpg" alt="" class="review-img">
+                                            <img src="images/profileImg6.jpg" alt="" class="review-img">
                                             <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
                                             <i class='bx bxs-quote-alt-left quote-icon'></i>
 
