--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             </div>
 
                             <div class="time-table">
-                                    <span class="time-topic">Catogries Time</span>
+                                    <span class="time-topic">Categories / Time</span>
 
                                     <ul class="time-lists">
                                             <li class="time-list flex">
@@ -259,7 +259,7 @@
 <!-- Brand Section -->
         <section class="section brand">
             <div class="brand-container container">
-                    <h4 class="section-subtitle"><i>Our Trusted Brand</i></h4>
+                    <h4 class="section-subtitle"><i>Kenyan Trusted Brands</i></h4>
 
                     <div class="brand-images">
                             <div class="brand-image">
