--- a/index.html
+++ b/index.html
@@ -348,8 +348,7 @@
                     </div>
 
                     <div class="newsletter media-icons flex">
-                        <a href="https://www.facebook.com"><i class='bx bxl-facebook'></i></a>
-                        <a href="https://twitter.com/i/flow/login"><i class='bx bxl-twitter' ></i></a>
+                        <a href="https://x.com/Twiriii"><i class='bx bxl-twitter' ></i></a>
                         <a href="https://www.instagram.com/accounts/login"><i class='bx bxl-instagram-alt' ></i></a>
                         <a href="https://github.com/login"><i class='bx bxl-github'></i></a>
                         <a href="https://www.youtube.com/login"><i class='bx bxl-youtube'></i></a>
@@ -405,7 +404,7 @@
                             </ul>
                     </div>
             </div>
-            <div class="footer-copyRight">&#169; PatienceTech. All rigths reserved</div>
+            <div class="footer-copyRight">&#169; PatienceTech. All rights reserved</div>
         </footer>
 
 <!-- Scroll Up -->
