--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             <div class="brand-image">
                                     <img src="images/brandImg2.png" alt="" class="brand-img">
                             </div>
-                            <div class="brand-image">
+                            <!-- <div class="brand-image">
                                     <img src="images/brandImg3.png" alt="" class="brand-img">
                             </div>
                             <div class="brand-image">
@@ -276,7 +276,7 @@
                             </div>
                             <div class="brand-image">
                                     <img src="images/brandImg5.png" alt="" class="brand-img">
-                            </div>
+                            </div> -->
                     </div>
             </div>
         </section>
@@ -288,7 +288,6 @@
                     <div class="review-text">
                             <h4 class="section-subtitle"><i>Reviews</i></h4>
                             <h2 class="section-title">What Clients Says</h2>
-                            <p class="section-description">Some reviews that customer said about coffee services and business Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt magnam totam repellat, labore commodi exercitationem!</p>
                     </div>
 
                     <div class="tesitmonial swiper mySwiper">
@@ -343,7 +342,7 @@
                     <p class="section-description">This is the perfect place to find a nice and cozy spot to sip some. You'll find the Java Jungle, Coffee Bean and more shops right in this website.</p>
 
                     <div class="newsletter-inputBox">
-                            <input type="email" placeholder="emai@example.com" class="newletter-input">
+                            <input type="email" placeholder="email@example.com" class="newletter-input">
                             <button class="button newsletter-button">Subscribe</button>
                     </div>
 
